# Pilot_Plant_Results

./: .gitignore  README.md  _publish.yml  _quarto.yml  index.html  index.qmd  pyproject.toml
docs/: index.html  robots.txt  search.json  sitemap.xml
docs/presentation/: index.html
presentation/: index.html  index.qmd  mytheme.scss
presentation/index_files/libs/revealjs/plugin/quarto-support/: footer.css
